# zoom_particle_load_creator

./: .gitignore  README.md  TODO  generate_particle_load.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: parameter_list.yml
examples/: 2MPP_DES2021_FullBox.yml  5Mpc_1.yml  5Mpc_1_Planck2018.yml  Eagle_100_FullBox.yml  Eagle_Lo_Res.yml  Eagle_Standard_Res.yml  Sibelius_Low_Res.yml  Sibelius_Standard_Res.yml  parameter_list.yml  params.toml
glass_files/: fortran_functions.py  fortran_glass_1.0  fortran_glass_103823.0  fortran_glass_12167.0  fortran_glass_125.0  fortran_glass_1331.0  fortran_glass_24389.0  fortran_glass_27.0  fortran_glass_4096.0  fortran_glass_50653.0  fortran_glass_512.0  fortran_glass_5832.0  fortran_glass_64.0  fortran_glass_6895.0  fortran_glass_8.0  fortran_glass_9261.0
src/particle_load/: Params.py  __init__.py  cosmology.py  ic_gen_functions.py  io.py  mympi.py  param_files.py  populate_particles.py
src/particle_load/cython/: __init__.py
src/particle_load/glass_files/: convert_ascii_to_fortran.py  fortran_functions.py  plot_glass.py
src/particle_load/high_resolution_region/: __init__.py  high_res_class.py  nearest.py  plot.py
src/particle_load/low_resolution_region/: __init__.py  find_nq.py  low_res_class.py  plot.py
src/particle_load/make_param_files/: __init__.py  ic_gen.py  param_files.py  swift.py
src/particle_load/params/: __init__.py  cosmology.py  params_class.py
src/particle_load/populate_particles/: __init__.py  functions.py  io.py  populate_high_res.py  populate_low_res.py  populate_particles.py
src/particle_load/scripts/: generate_particle_load.py  view_pl.py
src/particle_load/template_files/ic_gen/: params.inp  submit
src/particle_load/template_files/ic_gen/v8/: params.inp  params_0_con.inp  params_1_con.inp  params_2_con.inp
src/particle_load/template_files/ic_gen/v8.4/: params_0_con.inp  params_1_con.inp  params_2_con.inp  submit
src/particle_load/template_files/swift/dmo/: params.yml  resubmit  select_output.yml  snap_times.txt  submit
src/particle_load/template_files/swift/manticore/: stf_times_a.txt  stf_times_z.txt
src/particle_load/template_files/swift/sibelius/: params.yml  resubmit  submit
src/particle_load/template_files/swift/sibelius_flamingo/: params.yml  resubmit  submit
src/particle_load/template_files/swift/sibelius_variations/: params.yml  resubmit  stf_times_a.txt  submit
src/particle_load/template_files/swift/sibelius_variations_c8/: params.yml  resubmit  submit
src/scripts/: generate_particle_load.py  view_pl.py
tests/: Eagle_100_FullBox.toml  Eagle_100_FullBox.yml  Sibelius_5Mpc.hdf5  Sibelius_Low_Res.toml  Sibelius_Low_Res.yml  fortran_glass_4096.0  fortran_glass_4096.index  test_params.py
