[build-system]
requires = ["setuptools >= 60", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "particle_load"
description = "Make particles loads for Virgo Consortium zoom-in simulations"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: BSD 3-Clause License",
]
dependencies = [
    "numpy",
    "h5py",
    "pyaml",
    "mpi4py",
    "astropy",
    "matplotlib",
    "scipy"
]
requires-python = ">=3.8,<3.11"
version = "0.0.1"
readme = "README.md"
authors = [
  { name="Stuart McAlpine", email="stuart.mcalpine@fysik.su.se" },
]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)

[project.scripts]
generate-particle-load = "scripts.generate_particle_load:main"
